<resources>
    <string name="app_name">Login</string>
<!--    <string name="app_name">helloandroid</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot PassWord</string>
    <string name="login">LogIn</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="enter_password_here">Enter Password Here</string>
    <string name="password">Password</string>
</resources>
